Issue #21 footer link styles on mobile

--- a/scss/_states.scss
+++ b/scss/_states.scss
@@ -18,7 +18,7 @@
 }
 
 .footerlinks {
-	padding:0 25px 25px 0;
+	padding:0 0 25px 0;
 }
 
 .footerlinks ul {
